resolved tile overlap on navbar issue

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 .timelineItemBullet:before {
     content: '';
-    z-index: 10;
+    z-index: 0;
     position: absolute;
     top: 0;
     left: 0;
@@ -17,7 +17,7 @@
 
 .timelineItemBullet:after {
     content: '';
-    z-index: 10;
+    z-index: 0;
     background-image: url('./assets/timeline-bullet.svg');
     background-repeat: no-repeat;
     position: absolute;
